RESOLVED FIXED299006
[GStreamer][WebRTC] Fix several mem leaks reported by the GStreamer leak tracer
https://bugs.webkit.org/show_bug.cgi?id=299006
Summary [GStreamer][WebRTC] Fix several mem leaks reported by the GStreamer leak tracer
Philippe Normand
Reported 2025-09-17 01:39:58 PDT
.
Attachments
Philippe Normand
Comment 1 2025-09-17 01:52:16 PDT
EWS
Comment 2 2025-09-18 01:40:41 PDT
Committed 300145@main (8cf7c05ce072): <https://commits.webkit.org/300145@main> Reviewed commits have been landed. Closing PR #50848 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2025-09-18 01:41:12 PDT
Radar WebKit Bug Importer
Comment 4 2025-09-18 01:41:13 PDT
Note You need to log in before you can comment on or make changes to this bug.