Source/WebCore/Modules/mediastream/RTCPeerConnection.h
@@ -215,6 +215,8 @@ public:
     void startGatheringStatLogs(Function<void(String&&)>&&);
     void stopGatheringStatLogs();
 
+    void clearTransports();
+
 private:
     RTCPeerConnection(Document&);
 
